<resources>
    <string name="app_name">Blood Donors</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="finish">FINISH</string>

    <string name="ques1">How old are you ?</string>
    <string name="ques2">Are you Pregnant or just given birth ?</string>
    <string name="ques3">Do you have a serious heart condition ?</string>
    <string name="ques4">Do you have any iron problems ?</string>
    <string name="ques5">Have ever had recreational drugs ?</string>
    <string name="ques6">Did you travel overseas in the last 4 months ?</string>
    <string name="ques7">Are you less than 45 Kg in weight ?</string>
    <string name="ques8">Did you have fever in the past 3 weeks ?</string>
    <string name="msg">Allow Application to access your location</string>

    <string name="slide_1_title">Donor Registration</string>
    <string name="slide_1_desc">A donor registeration form needs to be properly filled with all the particulars and correct address for fututre correspondence</string>

    <string name="slide_2_title">Medical Screening</string>
    <string name="slide_2_desc">A preliminary medical screening,including checking of blood haemoglobin level,weight,height, and BP will be carried out to assess your fitness for blood donation</string>

    <string name="slide_3_title">Blood Donation</string>
    <string name="slide_3_desc">A trained medical person will draw the blood using all aseptic and antiseptic measures</string>

    <string name="slide_4_title">Rest and Refreshments</string>
    <string name="slide_4_desc">Light refreshment will be served after the donation.You should rest for about 10 to 15 minutes before leaving and read the post donation care leaflet carefully.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Navigation Drawer Titles-->

    <string name="AboutUs">About Us</string>
    <string name="Donors">Donors</string>
    <string name="Receiver">Receiver</string>
    <string name="Hospitals">Hospitals</string>
    <string name="BloodBanks">View Blood Banks</string>
    <string name="ADDBloodBanks">Add Blood Banks</string>

    <string name="Precautions">Precautions</string>
    <string name="Myprofile">My Profile</string>
    <string name="Shareit">Share It</string>
    <string name="Feedback">Rating</string>
    <string name="Request">Need for Blood</string>
    <string name="Viewneeds">View Needs</string>
    <string name="Faqs">FAQs</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Logout">Logout</string>
    <string name="Pharmacy">Pharmacy</string>
    <string name="Signin">Signin</string>
    <string name="Signup">Donor Registration</string>
    <string name="AddbBank">Add Blood Bank</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">About US</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_bloodbanks_map">Map</string>

    <string-array name="spinner_item">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="title_activity_main_map">Map</string>
    <string name="title_activity_donorlist_map">Map</string>
    <string name="title_activity_view_needs_map">Map</string>
    <string name="loading">Loading...</string>
    <string name="payment_txt"><![CDATA[<b>\"Your blood is precious : Donate, save a life &amp; make it Divine\"</b><br/><br/>If you like our services help us to do more by donating.<br/><br/>You can pay through <b><font color=\'#ab1719\'>Phone pay,Google Pay or Paytm</font></b><br/><br/>To this Contact :<b><font color=\'#ab1719\'>9010990285</font></b><br/><br/>Fratello InnoTech Pvt Ltd.,<br/><br/>Hyderabad<br/><br/>---OR---<br/><br/>]]></string>
    <string name="quiz">Yes, or no..  You\\\'ll only know it when you take this test that depends on the requirements of donation to decide, and you\\\'ll know how can you be a blood donor.  The test is based on the tests made by the american red cross and other blood donation organizations, so its result can be taken as a refrence</string>
    <string name="note"><u>For direction click on direction icon at bottom</u></string>
</resources>
