<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainmap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3.0"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:layout_weight="1.3">

                <Button
                    android:id="@+id/navigation_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/navigation_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:id="@+id/notificationll"
                android:paddingRight="10dp"
                android:layout_weight="0.4">

                <ImageView
                    android:id="@+id/notificatio_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_notifications_none_black_24dp" />
                <ImageView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:src="@drawable/feedbackimg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:id="@+id/sharell"
                android:layout_weight="1.3">

                <ImageView
                    android:id="@+id/share_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/shareicon" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:elevation="3dp"
            android:weightSum="2.0"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:layout_weight="0.3"
                android:drawableLeft="@drawable/bloods"
                android:drawablePadding="10dp"
                android:hint="Search"
                android:backgroundTint="@android:color/transparent"
                android:cursorVisible="false" />

            <ImageView
                android:id="@+id/searchimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1.7"
                android:padding="10dp"
                android:src="@drawable/search_icon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:weightSum="5.0">

            <LinearLayout
                android:id="@+id/fableftll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:weightSum="1.0"
                android:orientation="vertical"
                android:gravity="bottom"
                android:clickable="true"
                android:layout_marginLeft="10dp">


            <ImageView
                    android:id="@+id/fableft"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/emergency" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="3.0"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:id="@+id/hospitalll"
                    android:weightSum="1.0">

                    <ImageView
                        android:id="@+id/hospitalsimage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:src="@drawable/hospitals" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/Hospitals"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:id="@+id/donorll"
                    android:clickable="true"
                    android:weightSum="1.0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:src="@drawable/donaricon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/Donors"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:id="@+id/pharmacyll"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:weightSum="1.0">

                    <ImageView
                        android:id="@+id/pharmacyimage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:src="@drawable/pharmacy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/Pharmacy"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:weightSum="1.0"
                android:orientation="vertical"
                android:gravity="bottom"
                android:paddingRight="10dp">
                <TextView
                    android:id="@+id/fab8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="O-"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:background="@drawable/circle_textview"
                    android:layout_above="@+id/fabright"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/fab7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="O+"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:background="@drawable/circle_textview"
                    android:layout_above="@+id/fabright"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/fab6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="AB-"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:background="@drawable/circle_textview"
                    android:layout_above="@+id/fabright"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/fab5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="AB+"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:background="@drawable/circle_textview"
                    android:layout_above="@+id/fabright"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/fab4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="B-"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:background="@drawable/circle_textview"
                    android:layout_above="@+id/fabright"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/fab3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="B+"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:background="@drawable/circle_textview"
                    android:layout_above="@+id/fabright"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/fab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="A-"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:background="@drawable/circle_textview"
                    android:layout_above="@+id/fabright"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/fab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="A+"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:background="@drawable/circle_textview"
                    android:layout_above="@+id/fabright"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/fabright"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/plusfab" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/mapprogressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>